<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClickClick</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">WELCOME!! TO ClickClick</string>
    <string name="click">Click</string>
    <string name="load">Load More</string>
    <string name="track">Track</string>
    <string name="stop_track">Untrack</string>
    <string name ="get_count">Get Count</string>

</resources>
